Adapt HTML5 history to hash bang path
Allows for frontend to rewrite url for S3 redirects to #!/path as
described here

https://medium.com/@BjornKrols/how-to-enable-history-mode-for-aws-s3-hosted-vue-applications-3bf40d51d9a7

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
   <div id="app"></div>
+  <script>history.pushState({}, "Application entry", location.hash.substring(2));</script>
+
   <!-- built files will be auto injected -->
 </body>
 
